[metadata]
name = AES
version = 1.0
description = AES encryption
author = Gabriel Lindeblad
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    AES_Module
install_requires =
    dataclasses
python_requiers = >=3.7
package_dir =
    =src
    zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    mypy>=0.961
    flake8>=4.0.0
    tox>=3.25.0

[options.package_data]
AES_Module = py.typed

[flake8]
max-line-length = 160